# platform

./: .editorconfig  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: server.py
app/user/adapter/input/api/v1/: user.py
core/: config.py
core/database/: session.py
note/: fua.md
