[tool.poetry]
name = "plataforma"
version = "0.1.0"
description = ""
authors = ["cicer <git.use@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
pydantic-settings = "^2.1.0"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
